# Design-Patterns

./: .gitignore  CMakeLists.txt  README.md
Creational-Patterns/Prototype/: README.md
Creational-Patterns/Prototype/Prototype/: README.md
Creational-Patterns/Prototype/Prototype/C++/: CMakeLists.txt  README.md
Creational-Patterns/Prototype/Prototype/C++/include/: ConcretePrototypes.hpp  Prototype.hpp  PrototypeFactory.hpp
Creational-Patterns/Prototype/Prototype/C++/src/: main.cpp
Creational-Patterns/Singleton/: README.md
Creational-Patterns/Singleton/Naive-Singleton/: README.md
Creational-Patterns/Singleton/Naive-Singleton/C++/: CMakeLists.txt  README.md
Creational-Patterns/Singleton/Naive-Singleton/C++/include/: NaiveSingleton.hpp
Creational-Patterns/Singleton/Naive-Singleton/C++/src/: NaiveSingleton.cpp  main.cpp
Creational-Patterns/Singleton/Thread-Safe-Singleton/: README.md
Creational-Patterns/Singleton/Thread-Safe-Singleton/C++/: CMakeLists.txt  README.md
Creational-Patterns/Singleton/Thread-Safe-Singleton/C++/include/: ThreadSafeSingleton.hpp
Creational-Patterns/Singleton/Thread-Safe-Singleton/C++/src/: ThreadSafeSingleton.cpp  main.cpp
Creational-Patterns/Singleton/Use-Case/Database-Connection/: README.md
